testsuite/tests/rename/should_fail/T5513.hs
{-# LANGUAGE StandaloneDeriving #-}
module T5513 where

deriving instance lowercase_name a
