testsuite/tests/rename/should_fail/T5513.stderr

T5513.hs:4:19: error:
    • Instance head is not headed by a class
    • In the stand-alone deriving instance for ‘lowercase_name a’
